--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,6 @@
         margin-left:10%;
         text-align:justify;
 
-
       }
         article#work_details h2{
           font-size: 2vw;
@@ -202,7 +201,6 @@
           font-size: 1.3vw;
         }
 
-
         div.toolinks h4{
             color:black;
             display: inherit;
@@ -218,10 +216,8 @@
         }
 
 
-
 /*-------- features &links --------*/
       
-
        article#project_features{
          width: 60% ;  
          padding:75px 15px;
@@ -257,11 +253,10 @@
 
 
 /*---------section of work imgs & videos------*/
-
 section#work_img{
         padding-bottom:15%;
-        display: inline-block;
-       box-shadow: 1px 5px 50px #CFD0D1;
+        display: inherit;
+       /*box-shadow: 1px 5px 50px #CFD0D1;*/
 }
       article#work_imgs{
         width: 70%;
@@ -287,7 +282,7 @@ section#work_img{
         }
           .video_container iframe{
           position: absolute;
-          border:0;
+          border:20;
           top: 0;
           left: 0;
           width: 100%;
@@ -349,7 +344,7 @@ section#work_img{
       section#section_work ul#work_list li img{
             width: 100%;
             height: 100%;
-            margin-bottom: 10px;
+            margin-bottom: 4px;
         }
 
       section#section_work ul#work_list li:hover img{
@@ -399,12 +394,13 @@ section#work_img{
 
 /*-----media quiery-----*/
 @media (max-width: 840px) and (min-width: 641px)  {
+
+
   /* section main*/
   section#main{
   width: 100%;
   margin-left:60px;
   }
-
   section#about p{
    font-size: 1.2em;
 
@@ -428,12 +424,10 @@ section#work_img{
 }
 
 @media (max-width: 640px) and (min-width: 300px)  {
-
   section#main{
   width: 100%;
   margin-left:60px;
   }
-
   section#about h2{
    font-size: 0.6em;
 
@@ -452,6 +446,18 @@ section#work_img{
         padding: 12px 0;
         font-size: 16px;
     }
+
+         /*--------footer----------*/
+
+   footer#main_footer{
+      font-size: 0.8em;
+     }
+
+
+     footer#main_footer p{
+       text-align: left;
+       font-color:black;
+     }
   
   /* main & about */
   section#main{
@@ -462,7 +468,6 @@ section#work_img{
 }
 
   /* work list */
-
   section#section_work ul#work_list li.each_work{
     width: 100%;
     height: 100px;
@@ -504,7 +509,8 @@ section#work_img{
 
         }
 
-     
+    
+    
 
 /*---media quiery done-----*/
 
@@ -520,23 +526,22 @@ padding-top:1%;
   
   }
     footer#main_footer p{
-      font-family:"Times New Roman", Times, Serif;
+      font-family:"Karla", Times, Serif;
        text-align: center;
         text-transform: uppercase;
           letter-spacing:0.2em;
-          font-size: 0.9em;
-              color:black;
-          
-   /*   padding: 10px 0;*/
+          font-size: 1em;
+          color:#3A3A3A;
     }
 
 
 
  
-
+/*
   footer.project_footer a:link{
     font-size: 15px;
     font-weight: 300;
     opacity: 0.4;footer
   }
 }
+*/
