--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
   @font-face{ 
     font-style:normal;
-    font-family: 'Source Code Pro', 'lato', 'FontAwesome' sans-serif;
+    font-family: 'Source Code Pro','Big Caslon','FontAwesome' sans-serif;
     src: url('../fonts/fontawesome-webfont.eot?v=4.2.0');
     src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.2.0') format('embedded-opentype'),
      url('../fonts/fontawesome-webfont.woff?v=4.2.0') format('woff'), 
@@ -153,6 +153,34 @@
     -moz-box-shadow: 2px -21px 38px -1px rgba(0,0,0,0.45);
     box-shadow: 2px -21px 38px -1px rgba(0,0,0,0.45);
   }
+
+
+  header{
+      padding-top: 60px;
+      position: fixed;
+      top: 0;
+      text-align: center;
+      width: 100%;
+      min-height: auto;
+      margin: 0 auto;
+      overflow:hidden;
+      z-index:-1;
+      background: blue;
+      align-items: center;
+      justify-content: center;
+      vertical-align: middle;
+    }
+      header img{
+        max-width: 100%;
+        height: auto;
+        overflow: hidden;
+      
+        width: auto\9;
+        background: url(../img/fastfood_01.gif) center 70px no-repeat fixed; }
+
+      header .header_container{
+        min-width: 100%;
+      }
 
     section#work_content{
       padding: 60px 10px;
