--- a/css/main.css
+++ b/css/main.css
@@ -139,9 +139,7 @@
   
 
      article#expertise {
-
       padding-top:1em;
-  
   
      }
 
@@ -156,22 +154,19 @@
 }
      #expertise p{
       font-size: 1em;
-
       font-family: 'Garamond Premier Pro', Serif;
       font-weight: lighter;
       color:black;
      }
 
-    /*-----------//working list section #f1eaf0; ---------------*/
+    /*-----------//working list section; ---------------*/
     section#section_work{
       width:60%;
       float:right;
       display:inline-block;
       padding-left:2em;
-   /*   background:#fcfdff;*/
       position:inherit;
       z-index:9999;
-
     }
 
 
@@ -201,9 +196,7 @@
   section#section_work ul#work_list li.each_work{
     width: 32%;
     margin:1.3em;
-    transition: ALL 0.5s;/*
-    background-color:#f00;
-    background-color:#FFd0d2;*/
+    transition: ALL 0.5s;
   }
 
 
@@ -250,7 +243,7 @@
                 }
 
                 div.work_detail p.worksubtitle{
-                  font-size:0.6em;
+                  font-size:0.8em;
                   font-family: "Helvtica Neue",sans-serif;
                   letter-spacing:0.16em;
                   font-weight: lighter;
@@ -266,48 +259,20 @@
                   width:100%;
                   position:absolute;
                   font-family: "Merriweather" ,Helvetica, sans-serif;
-                  -webkit-box-shadow: 2px -21px 38px -1px rgba(0,0,0,0.45);
-                  -moz-box-shadow: 2px -21px 38px -1px rgba(0,0,0,0.45);
-                  box-shadow: 2px -21px 38px -1px rgba(0,0,0,0.45);
+                
                 }
 
 
                   section#work_content{
                     padding: 60px  100px;
-                    display: inline-block;
-                    display: -webkit-box;
-                    display: -ms-flexbox;
-                    display: -webkit-flex;
                     background-color:white;
-                     /* z-index:1;*/
+          
                   }
-         header{
-                  float:left;
-                  position: fixed;
-                  padding-top:10em;
-                  width: 20%;
-                  overflow:hidden;
-                  z-index:1;
-                  align-items: left;
-                  justify-content: center;
-                  text-align: center;
-                  vertical-align: middle;
-                }      
-
-                header img{
-                  max-width: 80%;
-                  height: auto;
-                  overflow: visible;
-                  width: auto\100;
-                  center 70px no-repeat fixed; }
-                 
-                  header .header_container{
-                    min-width: 100%;
-                  }
+     
                   article#navigation{
                     position: fixed;
-                    z-index:1;
-      -ms-transform: rotate(3deg); /* IE 9 
+                    z-index:999;
+      -ms-transform: rotate(3deg); /* IE 9 */
       -webkit-transform: rotate(3deg); /* Chrome, Safari, Opera */
       transform: rotate(3deg);
     }
@@ -315,16 +280,15 @@
     article#work_details{
       padding:2em;
       padding-top: 10px;
-      width: 60%;
-      margin-left:10%;
+      width: 100%;
+      margin-left:3%;
       text-align:justify;
-    
     }
 
 
 
     article#work_details h2{
-      font-size: 1.4vw;
+      font-size: 1vw;
 
     }
     article#work_details h3{
@@ -341,8 +305,8 @@
 
     /*-------- features &links --------*/
     article#project_features{
-     padding-top:10%;
-     margin-left:20px;
+     padding-top:8%;
+     margin-left:40px;
 
 
    }
@@ -351,7 +315,6 @@
     margin:2%;
     padding:5px;
     font-family: "Garamond Premier Pro", Helvetica, sans-serif;
-/*  background:#f0f1f1;*/
 
   }
 
@@ -395,8 +358,9 @@
   }
 
   div#links a:link{
-   font-color:black;
-   font-size:1vw;
+   font-color:black!important;
+   font-size:1.3vw;
+   font-weight: bolder;
    text-decoration:none!imporatnt;
    border:none;
   }
@@ -502,19 +466,21 @@
 
    /* work list */
    section#section_work ul#work_list li.each_work{
-    padding-left:20%;
+    padding-left:10%;
+    margin-top: 10%;
     width: 45%;
     height:40%;
     background:#ddffcc;
     overflow: hidden;
 
   }
+  
   div.work_detail p.worktitle{
     font-size: 1em;
 
   }
   div.work_detail p.worksubtitle{
-    font-size: 0.8em;
+    font-size: 0.7em;
 
   }
 }
@@ -526,21 +492,20 @@ section#main{
    }
 
  article#about{
-    font-size:0.9em;
+    font-size:0.8em;
     font-weight:bolder;
     letter-spacing:0.04em;
     text-align: left;
-
     background-color:#f0f0f0;
    }
 
 
 #about h2{
-     font-size: 1em;
+     font-size: 0.8em;
    }
 
    section#about p{
-     font-size: 1.1em;
+     font-size: 1em;
 
    }
 
@@ -548,25 +513,25 @@ section#main{
 
 
      /*nav*/
-   nav#main_nav{/*
-      height: 200px;*/
-      color:red;
-    }
-   nav#main_nav ul#nav_list{
-      /*height: 200px;*/
+   nav#main_nav{
+      height: 20px;
 
+    }
+ 
+   nav#main_nav ul#nav_list{
 
     }
 
     nav#main_nav ul li.link{
-      height: 2px;
-      font-size: 1em;
+      /*height: 2px;*/
+      font-size: 0.6em;
     }
 
 
   /* work list */
   section#section_work ul#work_list li.each_work{
     float:right;
+    margin-top: 50px;
     width:100%!important;
     background-color:#fcfdfa;
     overflow: hidden! important;
@@ -577,7 +542,7 @@ section#main{
   }
 
   div.work_detail{
-    height: 80px;
+    height: 40px;
   }
   a.work_link:hover div.work_detail{
     top:1px;
@@ -589,12 +554,12 @@ section#main{
     font-color:black!important;
   }
   ul#work_list li:hover div.work_detail p.worktitle{
-    font-size:5vw;
+    font-size:4vw;
     z-index:-9999;
     text-align:center!important;
     font-color:#d0c0a0;
    font-weight:bolder; 
-    transition: size 0.3s!important;
+    transition: size 0.4s!important;
   }
 
   div.work_detail p.worksubtitle{
@@ -610,9 +575,177 @@ section#main{
   }
 
 
+
+  /*PROJECT PAGE*/
+
+                div#project_wrapper{
+                  width:100%;
+                  position:absolute;
+                  font-family: "Merriweather" ,Helvetica, sans-serif;
+                  -webkit-box-shadow: 2px -21px 38px -1px rgba(0,0,0,0.45);
+                  -moz-box-shadow: 2px -21px 38px -1px rgba(0,0,0,0.45);
+                  box-shadow: 2px -21px 38px -1px rgba(0,0,0,0.45);
+                }
+
+
+                  section#work_content{
+                    padding: 60px  10px;
+                    display: inline-block;
+                    display: -webkit-box;
+                    display: -ms-flexbox;
+                    display: -webkit-flex;
+                    background-color:white;
+          
+                  }
+       
+
+    article#work_details{
+ 
+      padding-top: 10px;
+      width: 100%;
+      margin-left:1%;
+      text-align:left;
+      background:#f0f0f0;
+    
+    }
+
+
+
+    article#work_details h2{
+      font-size: 1.4vw;
+
+    }
+    article#work_details h3{
+      color:#00b6fb;
+      font-size: 1vw;
+      font-family: "Andale Mono", Sans-serif;
+
+    }
+
+
+    article#work_details p1{
+      font-size: 1vw;
+    }
+
+    /*-------- features &links --------*/
+    article#project_features{
+    position:inline-block;
+    margin-left:2px;
+    background:#f0f0f0;
+
+   }
+
+   .toolinks{
+    margin:1%;
+    padding:2px;
+    font-family: "Garamond Premier Pro", Helvetica, sans-serif;
+
+  }
+
+  div.toolinks h1{ 
+    color: black;
+    background-color: #e8e6fd;
+    font-size: 1.2vw;
+  }
+
+  div.toolinks h4{
+   padding:1px;
+   color:black;
+   display: inherit;
+   text-align: left;
+   font-size:0.9vw;
+  }
+
+  div.toolinks h4:hover{
+   font-weight: bolder;
+   color:white!important;
+   transition: background-color,color 0.5s;
+   background-color:#ee403d;     
+  }
+
+
+  div#features{ 
+  
+    font-family:"karla", sans-serif;
+    text-align: left;    
+    text-decoration:none!important;
+
+    background:#fcfcfc;
+  }
+
+
+  div#links{
+    margin:2%;
+    padding:6px;
+    font-family:"Merriweather", Helvetica, sans-serif;
+  }
+
+  div#links a:link{
+   font-color:black!important;
+   font-size:1.3vw;
+   font-weight: bolder;
+   text-decoration:none!imporatnt;
+   border:none;
+  }
+
+  div#links  a:hover{ transition:ALL 0.5s;
+/*    color:white;*/
+    background-color:#009933;
+  }
+
+  div#links  a:after{
+   content:'';
+   font-weight: bolder;
+   transition:ALL 0.3s;
+  }
+  div#links a:hover:after{
+    margin-left: 10px;
+  }
+
+
+  /*---------section of work imgs & videos------*/
+  section#Project_Content{
+   padding-bottom:3%;
+   display: inline-block;
+
+  }
+  article#Content{
+    width: 100%;
+    padding-top:0%;
+    padding-left:2%;
+
+  }
+  article#Content img{
+    margin-top:15px;
+    width: 95%;
+    height:95%;
+
+  }
+
+  article#Content
+  .video_container{
+    max-width: 80%;
+    padding-bottom: 70%;
+    margin-top: 20px;
+    position: relative;
+
+  }
+  .video_container iframe{
+    position: absolute;
+    border:8px solid black;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70%;
+    box-shadow:3px 5px 10px #cccccc;
+  }
+  /*PROJECT PAGE DONE*/
+
+
+/*FOOTER*/
   footer#main_footer 
    footer#main_footer  {
-   float:right;
+   float:center;
    width:100%;/*
    padding-bottom: 40px;*/
    padding-top:10px;
@@ -622,12 +755,10 @@ section#main{
   }
 
   footer#main_footer p{
-  /*  padding-left:14em;*/
     font-family:"Big Caslon", Sans-Serif;
-    text-align: right;
-    text-transform: uppercase;  
+    text-align: left;
     letter-spacing:0.14em;
-    font-size: 0.9em;
+    font-size: 0.6em;
     color:black;
 
   }
@@ -652,10 +783,8 @@ section#main{
    width:100%;
    padding-bottom: 40px;
    padding-top:10px;
-
    position:relative;
    z-index:99999;
-/*   background:white;*/
   }
 
 
@@ -666,7 +795,7 @@ section#main{
     font-family:"Big Caslon", Sans-Serif;
     text-align: right; 
     letter-spacing:0.14em;
-    font-size: 0.9em;
+    font-size: 0.8em;
     color:black;
 
   }
